@@ -27,7 +27,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #define INCL_ACTORS	1
 
 #include "contain.h"
-#include "utils.h"
+#include "utils.h"		// This is only included for Log2...
 
 class Image_window;
 class Game_window;
