@@ -38,7 +38,6 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "Mixer.h"
 #include "Midi.h"
 #include "exceptions.h"
-#include "utils.h"
 
 /*
  *	Music:
